# abstract_astar_search

./: .clang_format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
data/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in
include/: ai_search.h  logging.h  minunit.h  types.h  version.h  version.h.in
src/: CMakeLists.txt
src/ai_search/: CMakeLists.txt  ai_search.c
src/utils/: CMakeLists.txt
src/utils/logging/: CMakeLists.txt  logging.c
test/: CMakeLists.txt  test_ai_search.c  test_ai_search_demo_graph.c  test_ai_search_demo_grid.c
